--- a/demo/package.json
+++ b/demo/package.json
@@ -9,7 +9,7 @@
     "components": "0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "styled": "1.0.0",
     "web-vitals": "^2.1.4"
   },
