--- a/microservice/package.json
+++ b/microservice/package.json
@@ -1,7 +1,8 @@
 {
+    "type": "module",
     "dependencies": {
-      "body-parser": "^1.20.1",
-      "express": "^4.18.2"
+        "body-parser": "^1.20.1",
+        "express": "^4.18.2",
+        "node-fetch": "^3.3.0"
     }
-  }
-  
+}
